--- a/assignment_git/makefile
+++ b/assignment_git/makefile
@@ -1,6 +1,5 @@
 README.md:
-	rm README.md 2>/dev/null
 	echo "#Guessing Game Assignment#" > README.md
 	echo "##The Unix Workbench - *Coursera*##" >> README.md
 	echo "Make was run on "`date` >> README.md
-
+	echo "guessinggame.sh contains `cat guessinggame.sh | wc -l` lines of code" >> README.md 
